<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".FormLogin">

    <ImageView
        android:id="@+id/ImageIdViewLogin"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <View
        android:id="@+id/ContainerIdComponentsLogin"
        style="@style/ContainerComponents"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ImageIdViewLogin"/>

    <EditText
        android:id="@+id/EditTextIdEmailLogin"
        style="@style/Edit_Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/EditTextEmailLogin"
        android:drawableLeft="@drawable/ic_email"
        app:layout_constraintEnd_toEndOf="@id/ContainerIdComponentsLogin"
        app:layout_constraintStart_toStartOf="@id/ContainerIdComponentsLogin"
        app:layout_constraintTop_toTopOf="@id/ContainerIdComponentsLogin" />

    <EditText
        android:id="@+id/EditTextIdSenhaLogin"
        style="@style/Edit_Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/EditTextSenhaLogin"
        android:drawableLeft="@drawable/ic_lock"
        app:layout_constraintEnd_toEndOf="@id/ContainerIdComponentsLogin"
        app:layout_constraintStart_toStartOf="@id/ContainerIdComponentsLogin"
        app:layout_constraintTop_toBottomOf="@id/EditTextIdEmailLogin" />

    <androidx.appcompat.widget.AppCompatButton
        android:textAllCaps="false"
        android:id="@+id/ButtonIdLogin"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ButtonLogin"
        app:layout_constraintEnd_toEndOf="@id/ContainerIdComponentsLogin"
        app:layout_constraintStart_toStartOf="@id/ContainerIdComponentsLogin"
        app:layout_constraintTop_toBottomOf="@id/EditTextIdSenhaLogin" />

    <ProgressBar
        android:id="@+id/ProgressIdBarLogin"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/ContainerIdComponentsLogin"
        app:layout_constraintStart_toStartOf="@id/ContainerIdComponentsLogin"
        app:layout_constraintTop_toBottomOf="@id/ButtonIdLogin"/>

    <TextView
        android:id="@+id/TextViewIdCadastroLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/TextViewCadastroLogin"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/TextViewIdRecuperarLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ContainerIdComponentsLogin" />

    <TextView
        android:id="@+id/TextViewIdRecuperarLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/TextViewRecuperarContaLogin"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/TextViewIdCadastroLogin"
        app:layout_constraintTop_toBottomOf="@id/ContainerIdComponentsLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>